--- a/Book_O_Series/Book_O_Series.UWP/Views/MainPivot.xaml
+++ b/Book_O_Series/Book_O_Series.UWP/Views/MainPivot.xaml
@@ -3,24 +3,21 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Book_O_Series.UWP.Views"
-    xmlns:data="using:Book_O_Series.Model"
-    xmlns:viewmodels="using:Book_O_Series.ViewModel"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:models="using:Book_O_Series.Models"
     mc:Ignorable="d"
     DataContext="{Binding RelativeSource={RelativeSource Self}}"
     Background="{StaticResource PrimaryColor}">
-    
     <Page.Resources>
         <Style TargetType="PivotItem">
-            <Setter Property="Background" Value="White"/>
+            <Setter Property="Background" Value="LightBlue"/>
             <Setter Property="Margin" Value="0"/>
         </Style>
-
-        <DataTemplate x:Key="GvItemTemplate" x:DataType="data:Item">
+        <DataTemplate x:Key="GvItemTemplate" x:DataType="models:Item">
             <StackPanel Margin="0,10">
-                <TextBlock x:Name="txtText" Text="{Binding Text}" FontSize="16" FontWeight="Bold" Margin="0,5"/>
-                <TextBlock Text="{Binding Description}" FontSize="14"/>
+                <TextBlock x:Name="txtText" Text="{Binding Text}" Foreground="Black" FontSize="16" FontWeight="Bold" Margin="0,5"/>
+                <TextBlock Text="{Binding Description}" Foreground="Black" FontSize="14"/>
             </StackPanel>
         </DataTemplate>
     </Page.Resources>
@@ -34,7 +31,7 @@
         <PivotItem Header="{Binding Title}" DataContext="{Binding AboutViewModel}">
             <StackPanel>
                 <Border Background="{StaticResource AccentColor}" Padding="25">
-                    <Image Source="/Assets/xamarin_logo.png" Height="70"/>
+                    <Image Source="/Assets/StoreLogo.png" Height="70"/>
                 </Border>
                 <StackPanel Padding="10">
                     <TextBlock Margin="0,20" FontSize="20">
@@ -46,7 +43,7 @@
                             <Bold>Xamarin Platform</Bold>. It shares code with its
                             <Bold>iOS, Android, and Windows</Bold> versions.
                     </TextBlock>
-                    <Button Content="Learn More" Command="{Binding OpenWebCommand}" Margin="0,20" 
+                    <Button Content="Learn More" Command="{Binding OpenWebCommand}" Margin="0,20"
                             Background="{StaticResource PrimaryColor}" Foreground="White" HorizontalAlignment="Stretch"></Button>
                 </StackPanel>
             </StackPanel>
